Updates for Java20 and Eclipse debugging.